--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Olá Mundo!!!</h1>
+    <h1>Palmeiras nao tem mundial</h1>
 </body>
 </html>
